Cambia la bienveida de la pagina

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GameBoy | Videojuegos</title>
   <style>
-    /* === RESETEO yyuy GENERAL === */
+    /* === RESETEO GENERAL === */
     * {
       margin: 0;
       padding: 0;
@@ -292,7 +292,7 @@
   </header>
 
   <section class="hero" id="inicio">
-    <h2>Bienvenido todos a GameBoy</h2>
+    <h2>Bienvenidos a GameBoy</h2>
     <p>Tu portal de videojuegos donde la acción, la aventura y la creatividad nunca terminan.</p>
     <button class="btn" onclick="scrollToGames()">Explorar Juegos</button>
   </section>
