--- a/Index.html
+++ b/Index.html
@@ -292,7 +292,7 @@
   </header>
 
   <section class="hero" id="inicio">
-    <h2>Bienvenidos todos a GameBoy</h2>
+    <h2>Bienvenidos a GameBoy</h2>
     <p>Tu portal de videojuegos donde la acción, la aventura y la creatividad nunca terminan.</p>
     <button class="btn" onclick="scrollToGames()">Explorar Juegos</button>
   </section>
